--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="collections"/>
 	<classpathentry kind="src" path="OOPS"/>
 	<classpathentry kind="src" path="java8"/>
+	<classpathentry excluding="src/|collections/|OOPS/|java8/" kind="src" path=""/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
