--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="collections"/>
+	<classpathentry excluding="Collections.java" kind="src" path="collections"/>
 	<classpathentry kind="src" path="OOPS"/>
 	<classpathentry kind="src" path="java8"/>
 	<classpathentry excluding="src/|collections/|OOPS/|java8/|design patterns/|design patterns/" kind="src" path=""/>
